@@ -5,7 +5,6 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -24,7 +23,6 @@ import ua.com.fielden.platform.domaintree.testing.MasterEntity;
 import ua.com.fielden.platform.domaintree.testing.MasterEntityDatePropCategorizer.MasterEntityDatePropCategory;
 import ua.com.fielden.platform.domaintree.testing.MasterEntitySimpleEntityPropCategorizer.MasterEntitySimpleEntityPropCategory;
 import ua.com.fielden.platform.equery.lifecycle.LifecycleModel.GroupingPeriods;
-import ua.com.fielden.platform.reflection.Finder;
 import ua.com.fielden.platform.utils.Pair;
 
 /**
@@ -48,18 +46,18 @@ public class LifecycleDomainTreeManagerTest extends AbstractAnalysisDomainTreeMa
     }
 
     public static Object createDtm_for_LifecycleDomainTreeManagerTest() {
-        return new LifecycleDomainTreeManager(serialiser(), createRootTypes_for_LifecycleDomainTreeManagerTest());
+        return new LifecycleDomainTreeManager(factory(), createRootTypes_for_LifecycleDomainTreeManagerTest());
     }
 
     public static Object createIrrelevantDtm_for_LifecycleDomainTreeManagerTest() {
-        final CentreDomainTreeManagerAndEnhancer dtm = new CentreDomainTreeManagerAndEnhancer(serialiser(), createRootTypes_for_LifecycleDomainTreeManagerTest());
+        final CentreDomainTreeManagerAndEnhancer dtm = new CentreDomainTreeManagerAndEnhancer(factory(), createRootTypes_for_LifecycleDomainTreeManagerTest());
         dtm.provideLifecycleAnalysesDatePeriodProperties(createRootTypes_for_LifecycleDomainTreeManagerTest());
         enhanceManagerWithBasicCalculatedProperties(dtm);
         return dtm;
     }
 
     protected static Set<Class<?>> createRootTypes_for_LifecycleDomainTreeManagerTest() {
-        final Set<Class<?>> rootTypes = new HashSet<Class<?>>(createRootTypes_for_AbstractAnalysisDomainTreeManagerTest());
+        final Set<Class<?>> rootTypes = new HashSet<>(createRootTypes_for_AbstractAnalysisDomainTreeManagerTest());
         rootTypes.remove(EvenSlaverEntity.class); // this entity has been excluded manually in parent tests
         return rootTypes;
     }
@@ -188,8 +186,7 @@ public class LifecycleDomainTreeManagerTest extends AbstractAnalysisDomainTreeMa
 
     private List<String> lastN(final ILifecycleDomainTreeManager dtm, final int n) {
         final List<String> all = dtm.getRepresentation().includedProperties(MasterEntity.class);
-        final List<String> some = new ArrayList<String>(all.subList(all.size() - n, all.size()));
-        System.out.println("sublist == " + some);
+        final List<String> some = new ArrayList<>(all.subList(all.size() - n, all.size()));
         return some;
     }
 
@@ -198,7 +195,7 @@ public class LifecycleDomainTreeManagerTest extends AbstractAnalysisDomainTreeMa
     /////////////////////////////////////////////////////////////////////////////////
     @Test
     public void test_that_changing_lifecycle_property_leads_to_tree_expanding_by_category_markers_for_second_tick() throws InstantiationException, IllegalAccessException {
-        final CentreDomainTreeManagerAndEnhancer centre = new CentreDomainTreeManagerAndEnhancer(serialiser(), createRootTypes_for_LifecycleDomainTreeManagerTest());
+        final CentreDomainTreeManagerAndEnhancer centre = new CentreDomainTreeManagerAndEnhancer(factory(), createRootTypes_for_LifecycleDomainTreeManagerTest());
         // enhanceManagerWithBasicCalculatedProperties(centre);
         centre.initAnalysisManagerByDefault("Lifecycle report", AnalysisType.LIFECYCLE);
         final ILifecycleDomainTreeManager dtm = (ILifecycleDomainTreeManager) centre.getAnalysisManager("Lifecycle report");
@@ -221,7 +218,7 @@ public class LifecycleDomainTreeManagerTest extends AbstractAnalysisDomainTreeMa
 
         assertNull("The default LifecycleProperty should be Null.", dtm.getLifecycleProperty());
         // assertFalse("At the first time, the included properties should not contain any category.", lastN(dtm, 5).contains("available"));
-        assertEquals("Only date properties are included.", Arrays.asList("__YEAR", "__MONTH", "__FORTNIGHT", "__WEEK", "__DAY"), lastN(dtm, 5));
+        assertEquals("Only date properties are included.", List.of("__YEAR", "__MONTH", "__FORTNIGHT", "__WEEK", "__DAY"), lastN(dtm, 5));
         assertEquals("At the first time, the checked properties should be empty.", Arrays.asList(), dtm.getSecondTick().checkedProperties(MasterEntity.class));
         assertEquals("At the first time, the used properties should be empty as well as 'checked' properties.", Arrays.asList(), dtm.getSecondTick().usedProperties(MasterEntity.class));
         assertEquals("At the first time, no categories exist in the domain (no lifecycle property has been selected).", Arrays.asList(), dtm.getSecondTick().allCategories(MasterEntity.class));
@@ -261,12 +258,6 @@ public class LifecycleDomainTreeManagerTest extends AbstractAnalysisDomainTreeMa
 
         centre.initAnalysisManagerByDefault("Lifecycle report (new)", AnalysisType.LIFECYCLE);
         final ILifecycleDomainTreeManager dtm2 = (ILifecycleDomainTreeManager) centre.getAnalysisManager("Lifecycle report (new)");
-
-        // final Field[] fields = centre.getEnhancer().getManagedType(MasterEntity.class).getFields();
-        final List<Field> fields = Finder.findRealProperties(centre.getEnhancer().getManagedType(MasterEntity.class));
-        for (final Field f : fields) {
-            System.err.println(f.getName());
-        }
 
         assertNull("The default LifecycleProperty should be Null.", dtm2.getLifecycleProperty());
         // assertFalse("At the first time, the included properties should not contain any category.", lastN(dtm, 5).contains("available"));
